Revert "Can't check there are no --add-exports as running in a 17 JVM will add these now from some source"
This reverts commit bbe42a18896fbc8c1d4762bcc27ab3f30a6fbc4a.